--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,24 +5,23 @@ on:
       - main
 
 jobs:
-  Build:
+  Build-and-Test:
     runs-on: ubuntu-latest
     steps:
-      - name: Code checkout
+      - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Maven Build
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: 'maven' # Speeds up future runs by caching dependencies
+
+      - name: Run Maven Install
         run: mvn install
 
-
-  Testing:
-    runs-on: ubuntu-latest
-    needs: Build
-    steps:
-      - name: Code checkout
-        uses: actions/checkout@v4
-
-      - name: Run tests on main branch
+      - name: Run tests
         run: mvn test
 
       - name: Checkstyle
