--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,18 +1,23 @@
 name: Build Job
 on: 
-#   push:
-#     branches: 
-#       - main
-    pull_request:
+  push:
+    branches: 
+      - main
+  pull_request:
         branches:
         - main
+
+  workflow_dispatch:
+
+  schedule:
+    - cron: '0 0 * * 0'  # Runs every Sunday at midnight
 
 jobs:
   Build:
     runs-on: ubuntu-latest
     steps:
       - name: Code checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
 
       - name: Maven Build
         run: mvn install
@@ -23,7 +28,7 @@ jobs:
     needs: Build
     steps:
       - name: Code checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
 
       - name: Run tests on main branch
         run: mvn test
