--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -34,7 +34,7 @@ jobs:
       - name: Notify Build Status
         if: failure()
         run: echo "Build failed!"
-        
+
 
   Testing:
     runs-on: ubuntu-latest
@@ -44,7 +44,13 @@ jobs:
         uses: actions/checkout@v5
 
       - name: Run tests on main branch
+        if: github.ref == 'refs/heads/main'
         run: mvn test
 
       - name: Checkstyle
+        if: github.ref == 'refs/heads/main'
         run: mvn checkstyle:checkstyle
+    
+      - name: Run tests on other branches
+        if : github.ref == 'refs/heads/main'
+        run: echo " skipping the test as it is not on the main branch"
