--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -26,7 +26,7 @@ jobs:
         run: mvn install
 
       - name: upload build artifacts (WAR)
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v5
         with:
           name: vprofile-app
           path: target/*.war
@@ -54,3 +54,28 @@ jobs:
       - name: Run tests on other branches
         if : github.ref == 'refs/heads/main'
         run: echo " skipping the test as it is not on the main branch"
+
+  Security_scan:
+    runs-on: ubuntu-latest
+    needs: Build
+    steps:
+        - name: Code checkout
+          uses: actions/checkout@v5
+          with: 
+            fetch-depth: 0
+
+        - name: Run Trivy filesystem scan
+          uses: aquasecurity/trivy-action@0.28.0
+          with:
+            scan-type: fs
+            scan-ref: .
+            format: json
+            exit-code: 0
+            vuln-type: os,library
+            output: trivy-results.json
+
+        - name: Upload Trivy scan results as artifact
+          uses: actions/upload-artifact@v4
+          with:
+            name: trivy-scan-results
+            path: tirvy-results.json
